# synthetic_paragraph_classifier

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
data/html/: ._MALRAU.html  MALRAU.html
data/training_data/: ._Training_data_for_sentiment_analysis.xlsx
docs/: text_to_paragraphs.md
synthetic_paragraph_classifier/process_doc/: ._organic_reagents_from_iupac_name.py  convert_html_to_text.py  doc_parser.py  organic_reagents_from_iupac_name.py
synthetic_paragraph_classifier/training/: data_set.py
tests/: test_get_paragraphs_from_html.py  test_get_paragraphs_from_pdf.py
