[project]
name = "synthetic_paragraph_classifier"
version = "0.1.0"
description = "A fine-tune llm for performing sentiment analysis to classify paragraphs as synthetic paragraphs or not. This means determining whether paragrap describes synthetic conditions"
authors = [
    {name = "Dinga Wonanke",email = "dak52@uclive.ac.nz"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10 <3.15"
dependencies = [
    "spacy (>=3.8.11,<4.0.0)",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "transformers (>=4.57.3,<5.0.0)",
    "mkdocs (>=1.6.1,<2.0.0)",
    "inscriptis (>=2.7.0,<3.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "html5lib (>=1.1,<2.0)",
    "pymupdf (>=1.26.7,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "torch (==2.2.2)",
    "pandas (>=2.3.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",



]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
